# awesome-ml-epigenetics

./: .gitignore  CONTRIBUTING.md  README.md  config.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: paper_suggestion.yml
.github/workflows/: auto-merge.yml  historical-backfill.yml  issue-triage.yml  propose-update.yml  review-gate.yml  stale-suggestions.yml
scripts/: ci_checks.py  fulltext.py  http_client.py  issue_triage.py  netguard.py  review_agent.py  schemas.py  update_list.py
scripts/adapters/: __init__.py  arxiv.py  biorxiv.py  crossref.py  europepmc.py  openalex.py  pubmed.py
